--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,25 @@
-<section id="intro" class="wrapper style1 fullscreen fade-up">
-  <div class="inner">
-    <h1>{{title}}</h1>
-    <p>Contoso Ltd. (also known as Contoso and Contoso University) is a fictional company used by Microsoft as an example company and domain.</p>
-    <p>This is version 1.0.10 of this web application.</p>
-    <ul class="actions">
-      <li><a href="/who" class="button scrolly">Learn more</a></li>
-    </ul>
+
+
+<form action="action_page.php" method="post">
+  <div class="imgcontainer">
+    <img src="img_avatar2.png" alt="Avatar" class="avatar">
   </div>
-</section>
+
+  <div class="container">
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="uname" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <button type="submit">Login</button>
+    <label>
+      <input type="checkbox" checked="checked" name="remember"> Remember me
+    </label>
+  </div>
+
+  <div class="container" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    <span class="psw">Forgot <a href="#">password?</a></span>
+  </div>
+</form>
