--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <p>Contoso Ltd. (also known as Contoso and Contoso University) is a fictional company used by Microsoft as an example company and domain.</p>
     <p>Many traders know Dr. Elder from the book Trading for a Living, which has become a guide to the world of stock trading for many novice stock speculators. Admirals is pleased to announce the launch of a series of webinars featuring trading legend Dr. Alexander Elder!
 If you missed out, you can still watch the recording by clicking the button below.
-By the end of this video, you will have a better understanding about:</p>
+By the end of this video, you will have a better understanding about: version 10.1.1</p>
     <ul class="actions">
       <li><a href="/who" class="button scrolly">Learn more</a></li>
     </ul>
